--- a/frontend/src/pages/App/App.css
+++ b/frontend/src/pages/App/App.css
@@ -1,3 +1,13 @@
 .App {
   text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
+
+.content {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.content * {
+  margin-bottom: 10px;
 }
